Update 1.20.1a
Reverted bat changes for new JRE native support.