@@ -1,7 +1,7 @@
 @echo off
 :start
 ::Add --enable-native-access=ALL-UNNAMED to support flatlaf (due to aging API)
-java --enable-native-access=ALL-UNNAMED -jar NMSSaveEditor.jar -autoupdate
+java -jar NMSSaveEditor.jar -autoupdate
 if errorLevel 2 (
 	move /Y ~NMSSaveEditor.dl NMSSaveEditor.jar
 	goto start
